stupid bugfix with underground belts :/

--- a/HardCoreEnemies/changelog.txt
+++ b/HardCoreEnemies/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.1
+Date: 27.08.2025
+  Bugfixes:
+    - Fixed a weird bug where yellow underground belts would be at 250,000 resistances as opposed to 2500. -Rify
+---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 27.08.2025
   Features:
