--- a/HardCoreEnemies/changelog.txt
+++ b/HardCoreEnemies/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.3
+Date: 31.8.2025
+  Changes:
+    - New algorithm for modifying resistances that allows for every single player placeable and creatable entity to get their resistances modified.
+---------------------------------------------------------------------------------------------------
 Version: 1.0.2
 Date: 30.8.2025
   Changes:
