--- a/HardCoreEnemies/changelog.txt
+++ b/HardCoreEnemies/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.4
+Date: 31.8.2025
+  Bugfixes:
+    - Fixed biters getting resistances applied to them
+    - Fixed most combat buildings not working right
+---------------------------------------------------------------------------------------------------
 Version: 1.0.3
 Date: 31.8.2025
   Changes:
