--- a/HardCoreEnemies/changelog.txt
+++ b/HardCoreEnemies/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.4
-Date: 31.8.2025
+Date: 3.9.2025
   Features:
     - Added Enemy unit from metal & stars.
   Bugfixes:
@@ -10,7 +10,7 @@ Date: 31.8.2025
 Version: 1.0.3
 Date: 31.8.2025
   Changes:
-    - New algorithm for modifying resistances that allows for every single player placeable and creatable entity to get their resistances modified.
+    - New algorithm for modifying resistances that allows for every single player place-able and creatable entity to get their resistances modified.
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.2
 Date: 30.8.2025
